# finance-kb

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: investopedia-articles.md  investor-gov-terms.md  learnings.md  sources.md  step001-scaffold.md
docs/steps/: step-003-investopedia-ingestion.md  step-003-investor-gov-glossary-ingestion.md  step-004-boe-knowledge-bank-ingestion.md  step-005-chunking-strategy.md  step-006-embedding-chroma.md
ingest/: chunker.py  cli.py  errors.py  frontmatter_io.py  http.py  manifest.py
ingest/sources/: boe.py  boe_glossary.py  investopedia.py  investor_gov.py
