[project]
name = "finance-kb"
version = "0.1.0"
description = "Personal knowledge base for EU/UK capital reporting"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.scripts]
ingest = "ingest.cli:app"

[dependency-groups]
dev = ["ruff>=0.6", "pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingest", "api"]
